debug/k8s/svc.yml
kind: Service
apiVersion: v1
metadata:
  name: svc-debug
spec:
  selector:
    app: debug
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
