debug/k8s/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: debug
  namespace: default
spec:
  rules:
  - host: debug.test.com
    http:
      paths:
      - path: /
        backend:
          serviceName: debug
          servicePort: 8000
